# youtube-upload-manager

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat
config/: constants.py  settings.py
core/: account_manager.py  channel_importer.py  channel_manager.py  excel_manager.py  input_config.py  logger.py  path_utils.py  upload_worker.py  uploader.py  validator.py  youtube_service.py
data/: input_sources.json
gui/: channel_import_gui.py  channel_manager_gui.py  gui.py  gui.py.rej
tests/: conftest.py  test_channel_importer.py  test_gui_smoke.py  test_integration_contracts.py
